Bug 202258 - Album art missing in playlist after changing any settings
Summary: Album art missing in playlist after changing any settings
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playlist (show other bugs)
Version: 2.3-GIT
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-02 01:05 UTC by Gabriel Trisca
Modified: 2009-12-09 11:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Trisca 2009-08-02 01:05:20 UTC
Version:           2.1.1 (using KDE 4.2.2)
Compiler:          gcc (Ubuntu 4.3.3-5ubuntu4) 4.3.3 
OS:                Linux
Installed from:    Debian stable Packages

After changing the OSD configuration in the settings dialog the album art on every album in the playlist becomes a round pixelated circle.


How to Reproduce:

- Add an album (or more) containing an album cover to the playlist
- Go to the settings dialog->OSD
- Enable the settings, click OK
Comment 1 Mikko C. 2009-08-02 09:01:45 UTC
Confirmed in 2.2-git
Comment 2 Mark Kretschmann 2009-08-26 21:27:57 UTC
In fact, changing _any_ settings item has this effect. Here's some debug output for reference:


amarok: BEGIN: CollectionSetup::CollectionSetup(QWidget*) 
amarok:   BEGIN: QStringList MountPointManager::collectionFolders() 
amarok:     [MountPointManager] QDesktopServices::MusicLocation:  "/home/mark/Music" 
amarok:   END__: QStringList MountPointManager::collectionFolders() - Took 0.00059s  
amarok: END__: CollectionSetup::CollectionSetup(QWidget*) - Took 0.0029s             
amarok: BEGIN: void GeneralConfig::lockStateChanged(int)                             
amarok:   BEGIN: void MainWindow::setLayoutLocked(bool)                              
amarok:     [MainWindow] locked!                                                     
amarok:   END__: void MainWindow::setLayoutLocked(bool) - Took 0.0012s               
amarok: END__: void GeneralConfig::lockStateChanged(int) - Took 0.0014s              
amarok: BEGIN: virtual bool Amarok2ConfigDialog::hasChanged()                        
amarok:   BEGIN: virtual bool CollectionConfig::hasChanged()                         
amarok:     BEGIN: bool CollectionSetup::hasChanged() const
amarok:       BEGIN: QStringList MountPointManager::collectionFolders()
amarok:         [MountPointManager] QDesktopServices::MusicLocation:  "/home/mark/Music"
amarok:       END__: QStringList MountPointManager::collectionFolders() - Took 0.00026s
amarok:     END__: bool CollectionSetup::hasChanged() const - Took 0.00033s
amarok:   END__: virtual bool CollectionConfig::hasChanged() - Took 0.00037s
amarok:   BEGIN: virtual bool ServiceConfig::hasChanged()
amarok:   END__: virtual bool ServiceConfig::hasChanged() - Took 2.5e-05s
amarok: END__: virtual bool Amarok2ConfigDialog::hasChanged() - Took 0.00051s
amarok: BEGIN: virtual bool CollectionConfig::hasChanged()
amarok:   BEGIN: bool CollectionSetup::hasChanged() const
amarok:     BEGIN: QStringList MountPointManager::collectionFolders()
amarok:       [MountPointManager] QDesktopServices::MusicLocation:  "/home/mark/Music"
amarok:     END__: QStringList MountPointManager::collectionFolders() - Took 0.0003s
amarok:   END__: bool CollectionSetup::hasChanged() const - Took 0.00097s
amarok: END__: virtual bool CollectionConfig::hasChanged() - Took 0.0012s
amarok: BEGIN: virtual bool ServiceConfig::hasChanged()
amarok: END__: virtual bool ServiceConfig::hasChanged() - Took 2.5e-05s
amarok: BEGIN: void CollectionSetup::writeConfig()
amarok:   BEGIN: QStringList MountPointManager::collectionFolders()
amarok:     [MountPointManager] QDesktopServices::MusicLocation:  "/home/mark/Music"
amarok:   END__: QStringList MountPointManager::collectionFolders() - Took 0.00028s
amarok: END__: void CollectionSetup::writeConfig() - Took 0.00043s
amarok: BEGIN: void App::applySettings(bool)
amarok:   BEGIN: void Amarok::OSD::applySettings()
amarok:   END__: void Amarok::OSD::applySettings() - Took 5.6e-05s
amarok:   BEGIN: void MainWindow::hideContextView(bool)
amarok:   END__: void MainWindow::hideContextView(bool) - Took 2.5e-05s
amarok: END__: void App::applySettings(bool) - Took 0.0021s
amarok: BEGIN: virtual bool Amarok2ConfigDialog::hasChanged()
amarok:   BEGIN: virtual bool CollectionConfig::hasChanged()
amarok:     BEGIN: bool CollectionSetup::hasChanged() const
amarok:       BEGIN: QStringList MountPointManager::collectionFolders()
amarok:         [MountPointManager] QDesktopServices::MusicLocation:  "/home/mark/Music"
amarok:       END__: QStringList MountPointManager::collectionFolders() - Took 0.0003s
amarok:     END__: bool CollectionSetup::hasChanged() const - Took 0.00037s
amarok:   END__: virtual bool CollectionConfig::hasChanged() - Took 0.00042s
amarok:   BEGIN: virtual bool ServiceConfig::hasChanged()
amarok:   END__: virtual bool ServiceConfig::hasChanged() - Took 2.4e-05s
amarok: END__: virtual bool Amarok2ConfigDialog::hasChanged() - Took 0.00054s
amarok: BEGIN: void App::applySettings(bool)
amarok:   BEGIN: void Amarok::OSD::applySettings()
amarok:   END__: void Amarok::OSD::applySettings() - Took 5.8e-05s
amarok:   BEGIN: void MainWindow::hideContextView(bool)
amarok:   END__: void MainWindow::hideContextView(bool) - Took 2.6e-05s
amarok: END__: void App::applySettings(bool) - Took 0.002s
amarok: BEGIN: void CollectionSetup::writeConfig()
amarok:   BEGIN: QStringList MountPointManager::collectionFolders()
amarok:     [MountPointManager] QDesktopServices::MusicLocation:  "/home/mark/Music"
amarok:   END__: QStringList MountPointManager::collectionFolders() - Took 0.00028s
amarok: END__: void CollectionSetup::writeConfig() - Took 0.00042s
amarok: BEGIN: void App::applySettings(bool)
amarok:   BEGIN: void Amarok::OSD::applySettings()
amarok:   END__: void Amarok::OSD::applySettings() - Took 5.7e-05s
amarok:   BEGIN: void MainWindow::hideContextView(bool)
amarok:   END__: void MainWindow::hideContextView(bool) - Took 2.6e-05s
amarok: END__: void App::applySettings(bool) - Took 0.0018s
amarok: BEGIN: virtual OSDWidget::~OSDWidget()
amarok: END__: virtual OSDWidget::~OSDWidget() - Took 9.1e-05s
Comment 3 Mark Kretschmann 2009-08-26 21:58:20 UTC
commit 85b8387dbb07c3291ce0375d938e6f2efcbd5498
Author: Mark Kretschmann <kretschmann@kde.org>
Date:   Wed Aug 26 21:51:00 2009 +0200

    Changing Amarok's settings no longer removes album covers from playlist.

    In App::applySettings() we have some code for cleaning up the cover image
    cache. For some reason this code wasn't only run at startup, but everytime
    applySettings() was called - which is everytime some setting has changed.
Comment 4 Gabriel Trisca 2009-08-26 22:05:27 UTC
Good job!!!!!! :D :D