Changing Amarok's settings no longer removes album covers from playlist.

In App::applySettings() we have some code for cleaning up the cover image
cache. For some reason this code wasn't only run at startup, but everytime
applySettings() was called - which is everytime some setting has changed.

BUG: 202258